# fullstack-quickstart

./: .tool-versions  LICENSE  Makefile  README.md  Taskfile.yml  admin  api.just  db.just  init-template.sh  justfile  web.just
.cursor/rules/: coding-style.mdc  development-process.mdc  llm-authority.mdc  project-context.mdc
.github/workflows/: release-template.yml
api/: .env.example  .gitignore  README.md  pyproject.toml
api/src/api/: __init__.py
api/src/app/: __init__.py  auth.py  db.py  models.py
api/src/cli/: admin.py
api/tests/: test_auth.py  test_healthcheck.py  test_user_cli.py  test_user_model.py
db/: .env.example  README.md  docker-compose.yml
llm/: 00-rewrite-prompt.md  01-create-projects.md  02-google-auth.md  example-setup.sh  init-template.sh
script/: admin  init-template.sh
web/: README.md  package.json  vitest.config.ts
web/src/app/: page.test.tsx  page.tsx
